--- a/readme
+++ b/readme
@@ -1,1 +1,8 @@
-#Prueba Tecnica Jose herrera
+*Prueba Tecnica Jose herrera
+
+he subido un proyecto que realice el año pasado, se que deberia haber relizado el que ud me indico pero me ocurrio un problema con mi maquina
+el front end esta realizado en angularjs
+y con un backend en php 
+es mas para mostrar mi conocimiento
+
+sobre los temas manejo la creacion de restapi con springboot e incluso realice una integracion con un banco de la ciudad
